--- a/src/components/recomendaciones.css
+++ b/src/components/recomendaciones.css
@@ -26,3 +26,7 @@
   background-color: #ffffff;
   text-decoration: underline;
 }
+
+.scrolling-Box-temporal{
+  margin-bottom: 10%;
+}
